Fixed issue with alert color contrast Color ratio meets AA standard.

--- a/2/c/g.css
+++ b/2/c/g.css
@@ -2950,7 +2950,7 @@ input[type="submit"].btn.btn-mini {
   margin-bottom: 20px;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   background-color: #fcf8e3;
-  border: 1px solid #fbeed5;
+  border: 1px solid #856831;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
@@ -2958,7 +2958,7 @@ input[type="submit"].btn.btn-mini {
 
 .alert,
 .alert h4 {
-  color: #c09853;
+  color: #856831;
 }
 
 .alert h4 {
@@ -2973,9 +2973,9 @@ input[type="submit"].btn.btn-mini {
 }
 
 .alert-success {
-  color: #468847;
+  color: #3b723b;
   background-color: #dff0d8;
-  border-color: #d6e9c6;
+  border-color: #3b723b;
 }
 
 .alert-success h4 {
@@ -2984,9 +2984,9 @@ input[type="submit"].btn.btn-mini {
 
 .alert-danger,
 .alert-error {
-  color: #b94a48;
+  color: #a23f3d;
   background-color: #f2dede;
-  border-color: #eed3d7;
+  border-color: #a23f3d;
 }
 
 .alert-danger h4,
@@ -2995,9 +2995,9 @@ input[type="submit"].btn.btn-mini {
 }
 
 .alert-info {
-  color: #3a87ad;
+  color: #2a617d;
   background-color: #d9edf7;
-  border-color: #bce8f1;
+  border-color: #2a617d;
 }
 
 .alert-info h4 {
